// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`creates a mock Color field model 1`] = `
[
  {
    "config": {
      "label": "Enim",
      "placeholder": "Iaculis nunc sed",
    },
    "type": "Color",
  },
  {
    "config": {
      "label": "Enim",
      "placeholder": "Iaculis nunc sed",
    },
    "type": "Color",
  },
]
`;

exports[`supports number seed 1`] = `
[
  {
    "config": {
      "label": "Egestas",
      "placeholder": "Aliquam ut porttitor",
    },
    "type": "Color",
  },
  {
    "config": {
      "label": "Egestas",
      "placeholder": "Aliquam ut porttitor",
    },
    "type": "Color",
  },
]
`;
